--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "packageManager": "bun",
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.8",
+    "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
